--- a/drew-site/src/App.scss
+++ b/drew-site/src/App.scss
@@ -1,31 +1,28 @@
-.App {
+.Home {
   text-align: center;
 }
 
-.App-logo {
+.Home-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .Home-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.Home-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -34,5 +31,24 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.About {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 6vh;
+
+  .About-header {
+    min-height: 10vh;
+    font-size: calc(10px + 2vmin);
+  }
+
+  .content{
+    min-height: 20vh;
+    font-size: calc(8px + 2vmin)
   }
 }
