finished up basic chess functionality

--- a/drew-site/src/chess/Chess.scss
+++ b/drew-site/src/chess/Chess.scss
@@ -32,6 +32,7 @@
         .square-highlighted{
             @extend %general-square;
             border-color: blue;
+            border-width: 2px;
             
         }
     }
