--- a/drew-site/src/App.scss
+++ b/drew-site/src/App.scss
@@ -59,9 +59,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   min-height: 30vh;
-  margin-top: 5vh;
 
   .Contact-header {
     min-height: 10vh;
@@ -76,7 +75,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      padding: 2vh;
+      padding: 0.5vh;
 
       svg {
         padding: 1vh;
@@ -99,6 +98,14 @@
     }
 
     .address {
+      @extend %contact-point;
+    }
+
+    .linkedin {
+      @extend %contact-point;
+    }
+
+    .github {
       @extend %contact-point;
     }
   }
